--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-prettier": "^9.0.0",
     "gray-matter": "^4.0.3",
     "jose": "^5.2.3",
+    "jotai": "^2.12.3",
     "next": "15.3.0",
     "next-mdx-remote": "^4.4.1",
     "octokit": "^3.1.0",
@@ -33,7 +34,6 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-feather": "^2.0.10",
-    "recoil": "^0.7.7",
     "tailwindcss": "3.4.1",
     "typescript": "5.4.2"
   },
