--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "15.3.0",
+    "@tailwindcss/postcss": "^4.1.4",
     "@types/mdx": "^2.0.6",
     "@types/node": "20.11.25",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
     "@vercel/kv": "^1.0.1",
-    "autoprefixer": "10.4.18",
     "bright": "^0.8.4",
     "eslint": "8.57.0",
     "eslint-config-next": "15.3.0",
@@ -30,11 +30,11 @@
     "octokit": "^3.1.0",
     "postcss": "8.4.35",
     "prettier": "^3.2.4",
-    "prettier-plugin-tailwindcss": "^0.5.12",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-feather": "^2.0.10",
-    "tailwindcss": "3.4.1",
+    "tailwindcss": "^4.1.4",
     "typescript": "5.4.2"
   },
   "resolutions": {
