--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "gray-matter": "^4.0.3",
     "jose": "^5.2.3",
     "jotai": "^2.12.3",
+    "lucide-react": "^0.503.0",
     "next": "15.3.0",
     "next-mdx-remote": "^4.4.1",
+    "next-themes": "^0.4.6",
     "octokit": "^3.1.0",
     "postcss": "8.4.35",
     "prettier": "^3.2.4",
@@ -35,7 +37,8 @@
     "react-dom": "19.1.0",
     "react-feather": "^2.0.10",
     "tailwindcss": "^4.1.4",
-    "typescript": "5.4.2"
+    "typescript": "5.4.2",
+    "zod": "^3.24.3"
   },
   "resolutions": {
     "@types/react": "19.1.2",
