--- a/.gitignore
+++ b/.gitignore
@@ -48,4 +48,7 @@ next-env.d.ts
 !.yarn/versions
 .pnp.*
 
+# vscode
+.vscode
+
 # End of https://www.toptal.com/developers/gitignore/api/nextjs,yarn
