--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "server-only": "^0.0.1",
     "tailwindcss": "^4.1.4",
     "typescript": "5.4.2",
     "zod": "^3.24.3"
