refactor: 메인 페이지 개선, loader 로직을 별도의 라이브러리로 분리

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@h1y/next-loader": "^1.0.1",
     "@hookform/resolvers": "^5.0.1",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
