--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@h1y/next-loader": "^1.0.1",
     "@hookform/resolvers": "^5.0.1",
+    "@icons-pack/react-simple-icons": "^12.8.0",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "15.3.0",
@@ -69,6 +70,7 @@
     "react": "19.1.0",
     "react-day-picker": "8.10.1",
     "react-dom": "19.1.0",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.56.2",
     "react-resizable-panels": "^3.0.1",
     "recharts": "^2.15.3",
