--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "next": "15.3.0",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
+    "nextjs-toploader": "^3.8.16",
     "octokit": "^3.1.0",
     "postcss": "8.4.35",
     "prettier": "^3.2.4",
