--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "vaul": "^1.1.2",
-    "zod": "^3.24.4"
+    "zod": "^3.25.20"
   },
   "resolutions": {
     "@types/react": "19.1.2",
@@ -87,8 +87,12 @@
     "postcss": "8.4.35",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "remark-mdx": "^3.1.0",
+    "remark-parse": "^11.0.0",
     "tailwindcss": "^4.1.4",
     "tw-animate-css": "^1.2.9",
-    "typescript": "5.4.2"
+    "typescript": "5.4.2",
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0"
   }
 }
