--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.56.2",
     "react-resizable-panels": "^3.0.1",
+    "react-to-text": "^2.0.1",
     "recharts": "^2.15.3",
     "server-only": "^0.0.1",
     "sonner": "^2.0.3",
