--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
     "@h1y/next-loader": "^1.0.1",
     "@hookform/resolvers": "^5.0.1",
     "@icons-pack/react-simple-icons": "^12.8.0",
-    "@mdx-js/loader": "^3.0.1",
-    "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "15.3.0",
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-aspect-ratio": "^1.1.6",
@@ -41,21 +38,11 @@
     "@radix-ui/react-toggle": "^1.1.8",
     "@radix-ui/react-toggle-group": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.6",
-    "@tailwindcss/postcss": "^4.1.4",
-    "@types/mdx": "^2.0.6",
-    "@types/node": "20.11.25",
-    "@types/react": "19.1.2",
-    "@types/react-dom": "19.1.2",
-    "bright": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
-    "eslint": "8.57.0",
-    "eslint-config-next": "15.3.0",
-    "eslint-config-prettier": "^9.0.0",
-    "gray-matter": "^4.0.3",
     "input-otp": "^1.4.2",
     "jose": "^5.2.3",
     "jotai": "^2.12.3",
@@ -65,23 +52,19 @@
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.8.16",
     "octokit": "^3.1.0",
-    "postcss": "8.4.35",
-    "prettier": "^3.2.4",
-    "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "19.1.0",
     "react-day-picker": "8.10.1",
     "react-dom": "19.1.0",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.56.2",
     "react-resizable-panels": "^3.0.1",
+    "react-to-text": "^2.0.1",
     "recharts": "^2.15.3",
     "server-only": "^0.0.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.4",
-    "typescript": "5.4.2",
     "vaul": "^1.1.2",
-    "zod": "^3.24.4"
+    "zod": "^3.25.20"
   },
   "resolutions": {
     "@types/react": "19.1.2",
@@ -89,7 +72,28 @@
   },
   "packageManager": "yarn@4.9.1",
   "devDependencies": {
-    "remark-gfm": "^4.0.1",
-    "tw-animate-css": "^1.2.9"
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "15.3.0",
+    "@tailwindcss/postcss": "^4.1.4",
+    "@types/mdx": "^2.0.6",
+    "@types/node": "20.11.25",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.2",
+    "codehike": "^1.0.7",
+    "eslint": "8.57.0",
+    "eslint-config-next": "15.3.0",
+    "eslint-config-prettier": "^9.0.0",
+    "gray-matter": "^4.0.3",
+    "postcss": "8.4.35",
+    "prettier": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "remark-mdx": "^3.1.0",
+    "remark-parse": "^11.0.0",
+    "tailwindcss": "^4.1.4",
+    "tw-animate-css": "^1.2.9",
+    "typescript": "5.4.2",
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0"
   }
 }
